# py-libsalesforce

./: .editorconfig  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
libsalesforce/: __init__.py
libsalesforce/client/: __init__.py
libsalesforce/model/: __init__.py
libsalesforce/query/: __init__.py  api.py  construct.py  filter.py  interface.py  manager.py  spy.py
tests/: conftest.py
